# linuxdeploy-plugin-native_packages

./: .gitignore  README.md  appimagecraft.yml  pyproject.toml
.github/workflows/: continuous.yml
ldnp/: __main__.py  abstractpackager.py  appdir.py  context.py  deb.py  logging.py  packager.py  rpm.py  templating.py  util.py
ldnp/templates/deb/: control
ldnp/templates/rpm/: spec
