[tool.poetry]
name = "linuxdeploy-plugin-native_packages"
version = "0.0.1"
description = "Create native distribution packages with linuxdeploy"
authors = ["TheAssassin <theassassin@assassinate-you.net>"]
readme = "README.md"
packages = [{include = "ldnp"}]

[tool.poetry.dependencies]
# for hashlib.file_digest
python = "^3.11"
jinja2 = "^3.1.6"
pyxdg = "^0.28"
click = "^8.1.3"
python-gnupg = "0.5.5"
coloredlogs = "^15.0.1"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^25.1.0"}
isort = "^6.0.1"

[tool.poetry.scripts]
linuxdeploy-plugin-native_packages = "ldnp.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
